tests/suite/fail/generated/borrow/fail_move_eat_data.ny
fn eat(x: string) -> void { print(x) }
fn main() {
    let data = "hello"
    eat(data)
    print(data) //~ ERROR was moved
}
